# antybiurokrata

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  antybiurokrata_pl_PL.ts  main.cpp  mainwindow.ui
cmake/: add_compiler_flags.cmake  attach_package.cmake  create_library.cmake  get_all_files.cmake
engeener_docx/: engeneer_project.docx
libraries/: CMakeLists.txt
libraries/config/include/antybiurokrata/: types.hpp
libraries/config/include/antybiurokrata/libraries/config/: config.h
libraries/config/src/: config.cpp  types.cpp
libraries/configs/: CMakeLists.txt
libraries/configs/include/: config.h
libraries/configs/include/antybiurokrata/: types.hpp
libraries/configs/include/antybiurokrata/libraries/config/: config.h
libraries/configs/src/: types.cpp
libraries/core/: CMakeLists.txt
libraries/core/include/core/: carousel.h  thread_pool.h  threaded_processor.h  types.hpp
libraries/core/src/: thread_pool.cpp
libraries/demangler/: CMakeLists.txt
libraries/demangler/include/antybiurokrata/libraries/demangler/: demangler.h
libraries/demangler/include/antybiurokrata/libraries/html_scalpel/: html_scalpel.h
libraries/demangler/src/: demangler.cpp  html_scalpel.cpp
libraries/engine/: CMakeLists.txt
libraries/engine/include/antybiurokrata/libraries/engine/: engine.h
libraries/engine/src/: engine.cpp
libraries/generator/: CMakeLists.txt
libraries/generator/include/antybiurokrata/libraries/generator/: generator.h
libraries/generator/src/: generator.cpp
libraries/logger/: CMakeLists.txt
libraries/logger/include/: logger  logger.h
libraries/logger/include/antybiurokrata/libraries/logger/: logger.h
libraries/logger/include/logger/: logger.h
libraries/logger/src/: logger.cpp
libraries/network/: CMakeLists.txt
libraries/network/include/antybiurokrata/libraries/: global_adapters.hpp
libraries/network/include/antybiurokrata/libraries/bgpolsl_adapter/: bgpolsl_adapter.h
libraries/network/include/antybiurokrata/libraries/network/: network.h
libraries/network/include/antybiurokrata/libraries/orcid_adapter/: orcid_adapter.h
libraries/network/include/antybiurokrata/libraries/scopus_adapter/: scopus_adapter.h
libraries/network/src/: bgpolsl_adapter.cpp  network.cpp  orcid_adapter.cpp  scopus_adapter.cpp
libraries/objects/: CMakeLists.txt
libraries/objects/include/antybiurokrata/libraries/objects/: objects.h  processing_details.hpp  serialization_definitions.hpp
libraries/objects/include/antybiurokrata/libraries/orm/: orm.h
libraries/objects/src/: objects.cpp  orm.cpp
libraries/patterns/: CMakeLists.txt
libraries/patterns/include/: singleton.hpp  visitor.hpp
libraries/patterns/include/antybiurokrata/libraries/patterns/: functor.hpp  generator.hpp  observer.hpp  recursive_type_collection.hpp  safe.hpp  seiralizer.hpp  singleton.hpp  visitor.hpp
libraries/patterns/include/patterns/: functor.hpp  generator.hpp  observer.hpp  recursive_type_collection.hpp  singleton.hpp  visitor.hpp
libraries/patterns/src/: functor.cpp  generator.cpp  observer.cpp  rc_functors_example.cpp  recursive_type_collection.cpp  safe.cpp  serializer.cpp  singleton.cpp  visitor.cpp
libraries/submodules/: CMakeLists.txt
libraries/submodules/macros/: CMakeLists.txt
libraries/submodules/macros/include/: macros.hpp
libraries/submodules/macros/src/: macros.cpp
libraries/summary/: CMakeLists.txt
libraries/summary/include/antybiurokrata/libraries/summary/: summary.h
libraries/summary/src/: summary.cpp
preimplementations/: main.cpp  static_serial.hpp
tests/: CMakeLists.txt
tests/include/: testbase.h
tests/include/antybiurokrata/tests/: demangler.test.h  object.test.h  string_splitter.test.h  testbase.h
tests/include/antybiurokrata/tests/utils/: testbase.h
tests/src/: demangler_test.cpp  testbase.cpp  tests.cpp.in
windows/: CMakeLists.txt  create_new_window.py
windows/account_widget_item/: CMakeLists.txt
windows/account_widget_item/include/antybiurokrata/windows/account_widget_item/: account_widget_item.h
windows/account_widget_item/src/: account_widget_item.cpp
windows/example_window.in/: win.cmake.in  win.cpp.in  win.ui.in
windows/info_dialog/: CMakeLists.txt
windows/info_dialog/include/antybiurokrata/windows/info_dialog/: info_dialog.h
windows/info_dialog/include/info_dialog/: info_dialog.h
windows/info_dialog/src/: info_dialog.cpp  info_dialog.ui
windows/mainwindow/: CMakeLists.txt  mainwindow.h
windows/mainwindow/include/antybiurokrata/windows/mainwindow/: mainwindow.h
windows/mainwindow/include/mainwindow/: mainwindow.h
windows/mainwindow/src/: mainwindow.cpp  mainwindow.ui
windows/publication_widget_item/: CMakeLists.txt
windows/publication_widget_item/include/antybiurokrata/windows/publication_widget_item/: publication_widget_item.h
windows/publication_widget_item/src/: publication_widget_item.cpp
windows/widget_items/: CMakeLists.txt
windows/widget_items/include/antybiurokrata/windows/widget_items/: widget_items.h
windows/widget_items/src/: widget_items.cpp
