cmake_minimum_required(VERSION 3.19)
include( "${CUSTOM_CMAKE_SCRIPTS_DIR}/get_all_directories.cmake" )
include( "${CUSTOM_CMAKE_SCRIPTS_DIR}/add_include_directories.cmake" )

set( WINDOWSES "" PARENT_SCOPE )
SUBDIRLIST(SUBDIRS ${CMAKE_CURRENT_SOURCE_DIR})
foreach(ss ${SUBDIRS})
	add_subdirectory(${ss})
	LIST( APPEND WINDOWSES ${ss} )
endforeach()